Correctly loads XSSDB as a new Database format.